Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -151,7 +151,12 @@
                                 </p:tab>
 
                                 <p:tab title="Inpatient Reports">
-                                    <div class="d-grid gap-2"></div>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="Admission and Discharge" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="IP Unsettled Invoices" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Room Change" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Admission Category Wise Admission" />
+                                    </div>
                                 </p:tab>
 
                                 <p:tab title="Inventory Reports">
