Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -160,7 +160,20 @@
                                 </p:tab>
 
                                 <p:tab title="Inventory Reports">
-                                    <div class="d-grid gap-2"></div>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="Closing Stock" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Consumtion" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Stock Transfers" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Cost Of Good Sold" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Good in Transit" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="GRN Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Batch Wise Stock" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Slow/Fast/None Movement Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Before Stock Taking" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="After Stock Taking" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Stock Leger" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Expiry Item Report" />
+                                    </div>
                                 </p:tab>
 
                                 <p:tab title="Laboratary Reports">
