--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -177,7 +177,18 @@
                                 </p:tab>
 
                                 <p:tab title="Laboratary Reports">
-                                    <div class="d-grid gap-2"></div>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="Collection Center Statement" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Turn Around Time Details" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Turn Around Time(Hourly)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Peak Hour Statistics" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Sample Carrier" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Organism Antibiotic Sensitivity" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Investigation Wise Research" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Annual Test Statistics" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="External Laboratary Work load" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Investigation Month End Summary" />
+                                    </div>
                                 </p:tab>
 
                                 <p:tab title="Management Reports">
