Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -192,7 +192,21 @@
                                 </p:tab>
 
                                 <p:tab title="Management Reports">
-                                    <div class="d-grid gap-2"></div>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="Room Occupancy" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Surgery Survey" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Surgery Status" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Surgery Cost Estimation" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Duration Service Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Pharmacy Department Wise Sale Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Referring Doctor Wise Revenue" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="OT Room Wise Sergery Count" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Surgery Count(Surgery Wise)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Surgery Count(Doctor Wise)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Surgery Count(Type)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Admission Count(Consultant Wise)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Admission Count(Payment Type Wise)" />
+                                    </div>
                                 </p:tab>
 
                                 <p:tab title="Salary Reports">
