Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -209,10 +209,38 @@
                                     </div>
                                 </p:tab>
 
-                                <p:tab title="Salary Reports">
-                                    <div class="d-grid gap-2"></div>
+                                <p:tab title="QB Import Reports">
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="QB Import Report" />
+                                    </div>
                                 </p:tab>
-                                
+
+                                <p:tab title="Salary Reports">
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="All Staff Salary Summary" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Payroll" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Payroll(Accountant)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Payroll(By Department, By Roster)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Payroll(Selected Staff)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Over Time" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="No Pay and Salary Allowance Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Paysheet Component List" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Payment To Bank(Slip)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Payment To Bank(Pay Fast)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Component" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Component(Bank Wise)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Component(Between To Salary Cycles)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="EPF" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="ETF" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="EPF/ETF Upload Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Generate Or Not Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Salary Generate Or Delete Detail Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Staff Garduity" />
+                                        
+
+                                    </div>
+                                </p:tab>
+
                                 <p:tab title="Statistics Reports">
                                     <div class="d-grid gap-2"></div>
                                 </p:tab>
