Closes Issue#920 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -242,7 +242,11 @@
                                 </p:tab>
 
                                 <p:tab title="Statistics Reports">
-                                    <div class="d-grid gap-2"></div>
+                                    <div class="d-grid gap-2">
+                                        <p:commandButton   class="w-100"  ajax="false" value="Patient Journey" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Patient Ledger" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Speciality Wise Demographic Data" />
+                                    </div>
                                 </p:tab>
                             </p:accordionPanel>
 
