--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -26,7 +26,7 @@
                                         <p:commandButton   class="w-100" ajax="false" value="Employee Asset Issue" action="#{reportController.navigateToEmployeeAssetIssue()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Fixed Asset Issue" action="#{reportController.navigateToFixedAssetIssue()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset Warranty Expire Report" action="#{reportController.navigateToAssetWarentyExpireReport()}" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="Asset GRN Report" action="#{investigationCategoryController.navigateToAssetGrnReport()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Asset GRN Report" action="#{reportController.navigateToAssetGrnReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset Transfer Report" action="#{investigationCategoryController.navigateToAssetTransferReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Item Loacation History" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset AMC Expiry" />
