Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -27,7 +27,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="Fixed Asset Issue" action="#{reportController.navigateToFixedAssetIssue()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset Warranty Expire Report" action="#{reportController.navigateToAssetWarentyExpireReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset GRN Report" action="#{reportController.navigateToAssetGrnReport()}" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="Asset Transfer Report" action="#{investigationCategoryController.navigateToAssetTransferReport()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Asset Transfer Report" action="#{reportController.navigateToAssetTransferReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Item Loacation History" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset AMC Expiry" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Asset Warranty Expiry" />
