--- a/src/main/webapp/channel/management_index.xhtml
+++ b/src/main/webapp/channel/management_index.xhtml
@@ -9,45 +9,86 @@
     <ui:define name="content">
 
         <h:form>
-            <p:panel header="Cannel Management" >
+            <p:panel header="Channel Management" >
+                <div class="row mb-2">
+                    <div class="col-4">
+                        <p:panel header="Agency"  >
+                            <div class=" text-center w-100 d-flex justify-content-center">
+                                <div class="w-75">
+                                    <div  >
+                                        <p:commandButton value="Agencies" action="/channel/institutions" ajax="false" class="m-2 w-100"  ></p:commandButton>
+                                    </div>
 
-                <p:panelGrid columns="3" >
+                                    <div >
+                                        <p:commandButton value="Agenciey Credit Limit Update" action="/channel/institutions_udate_credit_limit" ajax="false" class="m-2 w-100" ></p:commandButton>
+                                    </div>
 
-                    <p:panel header="Agency" >
-                        <p:panelGrid columns="1" >
-                            <p:commandButton value="Agencies" action="/channel/institutions" ajax="false" ></p:commandButton>
-                            <p:commandButton value="Agenciey Credit Limit Update" action="/channel/institutions_udate_credit_limit" ajax="false" ></p:commandButton>
-                            <p:commandButton value="Agenciey Credit Limit Update(Bulk)" action="/channel/channel_agent_credit_bulk_update" ajax="false" ></p:commandButton>
-                            <p:commandButton value="Add Channel Book to Agency" ajax="false" action="/channel/channel_agent_referece_book" />
-                        </p:panelGrid>
-                    </p:panel>
+                                    <div >
+                                        <p:commandButton value="Agenciey Credit Limit Update(Bulk)" action="/channel/channel_agent_credit_bulk_update" ajax="false" class="m-2 w-100" ></p:commandButton>
+                                    </div>
+                                    <div >
+                                        <p:commandButton value="Add Channel Book to Agency" ajax="false" action="/channel/channel_agent_referece_book" class="m-2 w-100" />
+                                    </div>
+                                </div>
 
-                    <p:panel header="Staff" >
-                        <p:panelGrid columns="1" >
-                            <p:commandButton value="Manage Specialities" ajax="false"
-                                             action="/channel/maintanance/doctorSpeciality/List" ></p:commandButton>
-                            <p:commandButton value="Manage Consultants" ajax="false"
-                                             action="#{navigationController.navigateToAdminDoctorConsultant()}" ></p:commandButton>
-                        </p:panelGrid>
-                    </p:panel>
-                    
-                    <p:panel header="Channelling" >
-                        <p:panelGrid columns="1" >
-                            <p:commandButton value="Editing Appoinment Count" action="/channel/channel_booking_editing_appoinment_count" ajax="false" ></p:commandButton>
-                        </p:panelGrid>
-                    </p:panel>
-                    
-                    <p:panel header="Consultants" >
-                        <p:panelGrid columns="1" >
-                            <p:commandButton  styleClass="linkButton" ajax="false" value="Add Channelling Consultants to Institutions" action="#{navigationController.navigateToPersonInstitution()}"/>
-                        </p:panelGrid>
-                    </p:panel>
-                    <p:panel header="Shedule" >
-                        <p:panelGrid columns="1" >
-                            <p:commandButton  styleClass="linkButton" ajax="false" value="Channel Fee Update" action="/channel/channel_fee_change" actionListener="#{sheduleController.prepareAddFeeChange}" />
-                        </p:panelGrid>
-                    </p:panel>
-                </p:panelGrid>
+                            </div>
+
+                        </p:panel>
+                    </div>
+
+                    <div class="col-4">
+                        <p:panel header="Staff" >
+                            <div class=" text-center w-100 d-flex justify-content-center">
+                                <div class="w-75">
+                                    <div>
+                                        <p:commandButton value="Manage Specialities" ajax="false"
+                                                         action="/channel/maintanance/doctorSpeciality/List" class="m-2 w-50" ></p:commandButton> 
+                                    </div>
+                                    <div>
+                                        <p:commandButton value="Manage Consultants" ajax="false"
+                                                         action="#{navigationController.navigateToAdminDoctorConsultant()}" class="m-2 w-50" ></p:commandButton>
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+                        </p:panel>
+                    </div>
+
+                    <div class="col-4">
+                        <p:panel header="Channelling" >
+                            <div class="text-center w-100">
+                                <p:commandButton value="Editing Appoinment Count" action="/channel/channel_booking_editing_appoinment_count" ajax="false" ></p:commandButton>
+                            </div>
+                        </p:panel>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6">
+                        <p:panel header="Consultants" >
+                            <div class="text-center w-100">
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="Add Channelling Consultants to Institutions" action="#{navigationController.navigateToPersonInstitution()}"/>
+                            </div>
+                        </p:panel>
+                    </div>
+
+                    <div class="col-6">
+                        <p:panel header="Schedule" >
+
+                            <div class="text-center w-100">
+
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="Channel Fee Update" action="/channel/channel_fee_change" actionListener="#{sheduleController.prepareAddFeeChange}" />
+
+                            </div>
+
+                        </p:panel>
+                    </div>
+
+                </div>
+
+
             </p:panel>
 
         </h:form>
