--- a/src/main/webapp/hr/hr_admin.xhtml
+++ b/src/main/webapp/hr/hr_admin.xhtml
@@ -15,7 +15,8 @@
                     <div class="row">
                         <div class="col-md-3">
                             <h:form>
-                                <p:accordionPanel>
+                                <p:accordionPanel activeIndex="#{staffBasicController.hrAdminMenuIndex}">
+                                    <p:ajax process="@this"></p:ajax>
                                     <p:tab title="(I) Manage Components">
                                         <h:form>
                                             <div class="d-grid gap-2">
