--- a/src/main/webapp/hr/hr_admin.xhtml
+++ b/src/main/webapp/hr/hr_admin.xhtml
@@ -93,8 +93,8 @@
                                                                  value=" 1) Staff Paysheet Perfomance Allowance Value " class="w-100"
                                                                  actionListener="#{staffBasicController.makeNull}" />                              
                                                 <p:commandButton styleClass="linkButton" ajax="false" 
-                                                                 action="/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge" 
-                                                                 value="#{staffBasicController.navigateToHrStaffPaysheetComponentAllPerformanceAllovancePercentage()} " class="w-100"
+                                                                 action="#{staffBasicController.navigateToHrStaffPaysheetComponentAllPerformanceAllovancePercentage()}" 
+                                                                 value=" 2) Staff Paysheet Perfomance Allowance Percentage" class="w-100"
                                                                  actionListener="#{staffBasicController.makeNull}" />                              
                                             </div>
                                         </h:form>
