--- a/src/main/webapp/hr/hr_form_staff_transfer.xhtml
+++ b/src/main/webapp/hr/hr_form_staff_transfer.xhtml
@@ -1,12 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/hr/hr_admin.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="content">
+    <ui:define name="subContent">
         <h:form>
             <p:panel header="Staff Transfer Form">
                 <h:panelGrid columns="2">
