--- a/src/main/webapp/hr/hr_staff_admin.xhtml
+++ b/src/main/webapp/hr/hr_staff_admin.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/hr/hr_admin.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subContent">
 
                 <h:panelGroup >
                     <h:form  >
