--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -504,8 +504,8 @@
                 </div>
                 <div class="col-md-7" >
                     <p:panel id="panelSelectedBookinDetails">
-                        <p:tabView id="detail" rendered="true" style="width: 800px!important;height: 450px!important;">
-                            <p:tab title="Booking" id="booking" 
+                        <p:tabView id="detail" rendered="true" class="w-100">
+                            <p:tab title="Booking" id="booking" class="w-100"
                                    rendered="#{webUserController.hasPrivilege('ChannelBookingBokking') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
                                 <h:panelGrid columns="2" >
 
@@ -754,7 +754,7 @@
 
                             </p:tab>
 
-                            <p:tab title="REPRINT" id="rePrint"
+                            <p:tab title="REPRINT" id="rePrint" class="w-100"
                                    rendered="#{webUserController.hasPrivilege('ChannelBookingReprint') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
 
                                 <h:commandButton value="Print" actionListener="#{channelBillController.updatePrintStatus}"
@@ -779,7 +779,7 @@
                                 </div>
                             </p:tab>
 
-                            <p:panel id="panelBillPrint" >
+                            <p:panel id="panelBillPrint" class="w-100">
 
                                 <h:panelGroup id="panelAddedBillPrintFees" styleClass="noBorder">
                                     <ch:bill_fees bill="#{channelBillController.billSession.billItem.bill}"/>
@@ -787,7 +787,7 @@
 
                             </p:panel>
 
-                            <p:tab title="Cancel" id="cancel" rendered="#{webUserController.hasPrivilege('ChannelBookingCancel') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">                                                         
+                            <p:tab title="Cancel" class="w-100" id="cancel" rendered="#{webUserController.hasPrivilege('ChannelBookingCancel') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">                                                         
                                 #{channelBillController.billSession.bill.billType}
 
                                 <h:panelGroup rendered="#{channelBillController.billSession.billItem.bill.paymentMethod eq 'Agent'}" >
@@ -832,7 +832,7 @@
                                                  onclick="onSubmitButton();"/>
                             </p:tab>
 
-                            <p:tab title="Refund" id="refund" rendered="#{webUserController.hasPrivilege('ChannelBookingRefund') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">                          
+                            <p:tab title="Refund" class="w-100" id="refund" rendered="#{webUserController.hasPrivilege('ChannelBookingRefund') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">                          
                                 <h:panelGroup>
                                     <h:panelGrid columns="2" rendered="#{channelBillController.billSession.billItem.bill.paymentMethod eq 'Agent'}" >
 
@@ -913,7 +913,7 @@
 
                             </p:tab>
 
-                            <p:tab title="Settle" id="settle" rendered="#{webUserController.hasPrivilege('ChannelBookingSettle') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
+                            <p:tab title="Settle" class="w-100" id="settle" rendered="#{webUserController.hasPrivilege('ChannelBookingSettle') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
                                 <p:panel  id="set">
                                     <ch:bill_fees bill="#{channelBillController.billSession.billItem.bill}" />
 
@@ -973,7 +973,7 @@
                                     </h:panelGroup>
                                 </p:panel>
                             </p:tab>
-                            <p:tab title="Change" id="change" rendered="#{webUserController.hasPrivilege('ChannelBookingChange') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
+                            <p:tab title="Change" class="w-100" id="change" rendered="#{webUserController.hasPrivilege('ChannelBookingChange') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
                                 <h:panelGrid columns="2">
                                     <h:outputLabel value="Title"/>
                                     <p:selectOneMenu  value="#{bookingController.selectedBillSession.bill.patient.person.title}"  >
@@ -1007,7 +1007,7 @@
 
                                 </h:panelGrid>
                             </p:tab>
-                            <p:tab title="Search" rendered="#{webUserController.hasPrivilege('ChannelBookingSearch') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
+                            <p:tab title="Search" class="w-100" rendered="#{webUserController.hasPrivilege('ChannelBookingSearch') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
                                 <h:panelGrid columns="2">
                                     <p:calendar id="calFrom"  value="#{channelSearchController.fromDate}" placeholder="From Date" pattern="dd MMMM yyyy hh:mm:ss a" >   
                                         <f:ajax event="dateSelect" execute="@this" render="bSessionSearch"/>
@@ -1073,7 +1073,7 @@
 
                             </p:tab>
 
-                            <p:tab title="Views" rendered="#{webUserController.hasPrivilege('ChannelBookingViews') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
+                            <p:tab title="Views" class="w-100" rendered="#{webUserController.hasPrivilege('ChannelBookingViews') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
                                 <h:panelGrid columns="2">
                                     <p:panel header="Selected Session">
                                         <h:panelGrid columns="1">
@@ -1112,7 +1112,7 @@
 
                             </p:tab>
 
-                            <p:tab title="Doctor Payment" rendered="#{webUserController.hasPrivilege('ChannelBookingDocPay') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}">
+                            <p:tab title="Doctor Payment" rendered="#{webUserController.hasPrivilege('ChannelBookingDocPay') || sessionController.loggedPreference.applicationInstitution ne 'Ruhuna'}" class="w-100">
                                 <p:panel header="Selected Session">
                                     <h:panelGrid columns="1">
                                         <p:commandButton value="Pay Selected Doctor" action="#{bookingController.paySelectedDoctor}" 
