--- a/src/main/webapp/channel/channel_agent_credit_bulk_update.xhtml
+++ b/src/main/webapp/channel/channel_agent_credit_bulk_update.xhtml
@@ -5,8 +5,8 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:au="http://java.sun.com/jsf/composite/autocomplete"
-                template="/resources/template/template.xhtml">
-    <ui:define name="content">
+                template="/channel/management_index.xhtml">
+    <ui:define name="subcontent">
         <h:form>
             <p:panel header="Manage Person Institutions(Channeling)" >
                 <p:panel>
