close Issue#978 Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_room_category.xhtml
+++ b/src/main/webapp/inward/inward_room_category.xhtml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/inward/inward_administration.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:panelGroup >
             <h:form  >
                 <p:growl/>
@@ -20,10 +20,6 @@
                         <h:outputLabel value="Manage Room Facility Category" ></h:outputLabel>
 
                     </f:facet>
-
-                    <h:commandLink action="/inward/inward_administration" >
-                        <p:graphicImage library="image" name="back.jpg" styleClass="backButton"></p:graphicImage>
-                    </h:commandLink>
 
 
                     <h:panelGrid id ="gpVeda" columns="2" >
