--- a/src/main/webapp/inward/inward_price_adjustment_store.xhtml
+++ b/src/main/webapp/inward/inward_price_adjustment_store.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/inward/inward_administration.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Inward Price Adjustment Matrix- Store" id="reportPrint">
 
