close issue#952 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/inward/inward_report_bht_inward_vat.xhtml
+++ b/src/main/webapp/inward/inward_report_bht_inward_vat.xhtml
@@ -10,7 +10,7 @@
 
     <h:body>
 
-        <ui:composition template="/reportInstitution/report_own.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
 
             <ui:define name="subcontent">
                 <h:form>
