--- a/src/main/webapp/inward/all_payment_by_created_date_discharged_only.xhtml
+++ b/src/main/webapp/inward/all_payment_by_created_date_discharged_only.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="ALL PAYMENT  SUMMERIES (Discharge B.H.T. only)" >
