--- a/src/main/webapp/inward/bht_deposit_by_discharge_date.xhtml
+++ b/src/main/webapp/inward/bht_deposit_by_discharge_date.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
 
