--- a/src/main/webapp/inward/inward_bill_final_break_down_error.xhtml
+++ b/src/main/webapp/inward/inward_bill_final_break_down_error.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/inward/inward_reports.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui"
@@ -9,7 +9,7 @@
                 xmlns:breakDown="http://java.sun.com/jsf/composite/inward/breakDown">
 
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
 
             <p:panel id="reportPrint"  >
