--- a/src/main/webapp/inward/inward_professional_payment_discharged_or_notdischarged.xhtml
+++ b/src/main/webapp/inward/inward_professional_payment_discharged_or_notdischarged.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/inward/inward_reports.xhtml">
+            <ui:define name="subcontent">
                 <h:outputStylesheet library="css" name="printing.css" />
 
                 <h:form>
