--- a/src/main/webapp/inward/pharmacy_report_bht_issue_by_item.xhtml
+++ b/src/main/webapp/inward/pharmacy_report_bht_issue_by_item.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form >
                     <h:panelGrid columns="2" >
                         <h:outputLabel value="From Department" />
