--- a/src/main/webapp/inward/report_doctor_payment_by_bill.xhtml
+++ b/src/main/webapp/inward/report_doctor_payment_by_bill.xhtml
@@ -10,9 +10,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Doctor Payment(By Bill)" >
                         <p:panel>
