--- a/src/main/webapp/inward/report_md_inward_bill.xhtml
+++ b/src/main/webapp/inward/report_md_inward_bill.xhtml
@@ -1,16 +1,15 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/inward/inward_reports.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 >
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
             <p:panel>
-
                 <h:panelGrid columns="5" style="min-width: 100%;">                    
                     <h:outputLabel value="From"/>
                     <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{mdInwardReportController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
@@ -23,10 +22,10 @@
 
                     <p:panelGrid columns="2" >
                         <p:commandButton ajax="false" value="Process By Added Date" 
-                                        action="#{mdInwardReportController.createServiceBillsByAddedDate}"
+                                         action="#{mdInwardReportController.createServiceBillsByAddedDate}"
                                          style="float: right;" onclick="onSubmitButton();" />
                         <p:commandButton ajax="false" value="Process By Discharge Date" 
-                                        action="#{mdInwardReportController.createServiceBillsByDischargeDate()}"
+                                         action="#{mdInwardReportController.createServiceBillsByDischargeDate()}"
                                          style="float: right;" onclick="onSubmitButton();" />
                     </p:panelGrid>
                 </h:panelGrid>   
