--- a/src/main/webapp/theater/inward_search_surgery_1.xhtml
+++ b/src/main/webapp/theater/inward_search_surgery_1.xhtml
@@ -9,8 +9,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/inward/inward_reports.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Search Bills" >
                         <f:facet name="header" >
